// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createInitialCommit commits a message and a branch from the special template values 1`] = `
Array [
  Array [
    "git",
    Array [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "commit",
      "-minitialCommitMessageMock",
      "--quiet",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "branch",
      "-m",
      "defaultBranchNameMock",
    ],
    "repoPathMock",
  ],
]
`;

exports[`createInitialCommit commits a message on the main branch 1`] = `
Array [
  Array [
    "git",
    Array [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "commit",
      "-mfeat(generation): initial commit",
      "--quiet",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "branch",
      "-m",
      "main",
    ],
    "repoPathMock",
  ],
]
`;

exports[`createInitialCommit includes initialCommitOptions 1`] = `
Array [
  Array [
    "git",
    Array [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "commit",
      "-mfeat(generation): initial commit",
      "--quiet",
      "--test-option",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "branch",
      "-m",
      "defaultBranchNameMock",
    ],
    "repoPathMock",
  ],
]
`;
